# spheronizator

./: .readthedocs.yaml  CONTRIBUTING.md  README.md  boxFunctions.py  box_algorithm.py  condaload.sh  config  dataWrapper.py  debug.exportBoxes.py  mol2parser.py  proteinBox.py  pyproject.toml  setup.py  spheronizator_env.yml  test.py  voxelize.py
.github/workflows/: documentation.yaml  draft-pdf.yml
docs/: book.toml  docs.ipynb
docs/src/: SUMMARY.md  cli.md  configuration.md  contributors.md  data.md  getting-started.md  installation.md  intro.md  introduction.md  links.md  output.md  overview.md  projection.md  research.md  voxelBuilder.md
examples/: demo.ipynb
paper/: paper.bib  paper.md
src/spheronizator/: voxelBuilder.py
testing_scripts/: debug.exportBoxes.py
tests/sampledata/: 1YU6_A.pdb.mol2  1YU6_C.pdb.mol2  1ZHH_A.pdb.mol2  1ZHH_B.pdb.mol2  2C2J_A.pdb.mol2  2GI3_A.pdb.mol2  REFERENCES.md
